--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,17 +1,16 @@
-{% load static %}
-<!-- Prism CSS -->
-<link href="{% static "tinymce/css/prism.css" %}" rel="stylesheet">
-</head>
-<body>
+{% extends 'main/header.html' %}
 
-{% for tut in tutorials %}
-    <p>{{tut.tutorial_title}}</p>
-    <p>{{tut.tutorial_published}}</p>
-    <p>{{tut.tutorial_content|safe}}</p>
-    <br><br>
-{% endfor %}
-
-
-<!-- Prism JS -->
-<script src="{% static "tinymce/js/prism.js" %}"></script>
-</body>
+{% block content %}
+  <div class="row">
+    {% for tut in tutorials %}
+        <div class="col s12 m6">
+          <div class="card blue-grey darken-1 hoverable">
+            <div class="card-content white-text">
+              <span class="card-title">{{tut.tutorial_title}}</span>
+              <p style="font-size:70%">Published {{tut.tutorial_published}}</p>
+              <p>{{tut.tutorial_content|safe}}</p>
+            </div>
+          </div>
+        </div>
+    {% endfor %}
+{% endblock %}
