--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -16,7 +16,7 @@
           </div>
       {% endfor %}
     {% else %}
-      <h1>Please <a href="/login" target="blank"><strong>login</strong></a> or <a href="/register" target="blank"><strong>sign-up</strong></a> to display tutorials sasas</h1>
+      <h1>Please <a href="/login" target="blank"><strong>login</strong></a> or <a href="/register" target="blank"><strong>sign-up</strong></a> to display tutorialss</h1>
       <img src="{% static 'main/images/devops_image.jpg' %}">
       <img src="{% static 'main/images/devops.jpg' %}">
     {% endif %} 
